23/11 commit NotificationControllerTest